# graphic_2d

./: .clang-format  .eslintrc.js  .git-credentials.swp  .gitignore  .gitmodules  1.diff  1121.diff  11513.diff  125.diff  125.diff:Zone.Identifier  7912.patch  7912.patch:Zone.Identifier  9881.diff  BUILD.gn  CMakeLists.txt  CiReadMongoConfig.java  CiWriteMongoConfig.java  CodeCheckMongoConfig.java  DataSourceConfig.java  FullCheckThreadPoolConfig.java  GPATH  GTAGS  ListToVarcharTypeHandler.java  OAT.xml  ProjectManagementServiceImpl.java  README.md  README_zh.md  RedisConfig.java  ScheduleDelegateImpl.java  SyncDetailsThreadPool.java  TaskIncResultDetailDelegateImpl.java  TaskOperation.java  ThreadPoolConfig.java  \  babel.config.js  bundle.json  commitlint.config.js  compile_commands.json  default.scss  drawable.patch  (+19 more)
frameworks/bootanimation/: BUILD.gn
frameworks/bootanimation/include/: boot_animation.h  boot_animation_config.h  boot_animation_factory.h  boot_animation_operation.h  boot_animation_strategy.h  boot_associative_display_strategy.h  boot_compatible_display_strategy.h  boot_compile_progress.h  boot_independent_display_strategy.h  boot_picture_player.h  boot_player.h  boot_sound_player.h  boot_video_player.h  boot_videoplayer.h  raw_parser.h  util.h
frameworks/bootanimation/src/: boot_animation.cpp  boot_animation_controller.cpp  boot_animation_operation.cpp  boot_animation_strategy.cpp  boot_associative_display_strategy.cpp  boot_compatible_display_strategy.cpp  boot_compile_progress.cpp  boot_independent_display_strategy.cpp  boot_picture_player.cpp  boot_sound_player.cpp  boot_video_player.cpp  boot_videoplayer.cpp  main.cpp  raw_parser.cpp  util.cpp
frameworks/bootanimation/utils/: BUILD.gn
frameworks/cursor/: BUILD.gn
frameworks/cursor/image/: raw.raw
frameworks/cursor/include/: cursor.h  cursor_log.h
frameworks/cursor/src/: cursor.cpp  main.cpp
frameworks/vulkan_layers/: BUILD.gn
frameworks/vulkan_layers/include/: swapchain_layer_log.h
frameworks/vulkan_layers/swapchain_layer/: swapchain_layer.cpp
frameworks/vulkan_shell/: BUILD.gn
frameworks/vulkan_shell/include/: vulkan_application.h  vulkan_backbuffer.h  vulkan_command_buffer.h  vulkan_debug_report.h  vulkan_device.h  vulkan_handle.h  vulkan_image.h  vulkan_interface.h  vulkan_native_surface.h  vulkan_native_surface_ohos.h  vulkan_proc_table.h  vulkan_provider.h  vulkan_shell_hilog.h  vulkan_surface.h  vulkan_swapchain.h  vulkan_utilities.h  vulkan_window.h
frameworks/vulkan_shell/src/: vulkan_application.cpp  vulkan_backbuffer.cpp  vulkan_command_buffer.cpp  vulkan_debug_report.cpp  vulkan_device.cpp  vulkan_handle.cpp  vulkan_image.cpp  vulkan_interface.cpp  vulkan_native_surface.cpp  vulkan_native_surface_ohos.cpp  vulkan_proc_table.cpp  vulkan_provider.cpp  vulkan_surface.cpp  vulkan_swapchain.cpp  vulkan_utilities.cpp  vulkan_window.cpp
frameworks/vulkan_triangle/: BUILD.gn  VulkanUtils.cpp  vulkanexample.h
frameworks/vulkan_wrapper/: BUILD.gn
frameworks/vulkan_wrapper/include/: api_export.h  driver.h  driver_loader.h  swapchain.h  vk_ohos_native_buffer_543.h  vk_ohos_native_buffer_bak.h  wrapper_log.h
frameworks/vulkan_wrapper/src/: api_export.cpp  driver.cpp  driver_loader.cpp  swapchain.cpp
frameworks/vulkan_wrapper/test/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanDevice.cpp  VulkanDevice.h  VulkanInitializers.hpp  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanTools.cpp  VulkanTools.h  VulkanUtils.cpp  VulkanUtils.h  camera.hpp  triangle.cpp  vulkan_wrapper_native_test.cpp  vulkanexamplebase.cpp  vulkanexamplebase.h
frameworks/wmtest/: BUILD.gn  inative_test.h  main.cpp  native_test_0.cpp  native_test_1.cpp  native_test_1.h  native_test_11.cpp  native_test_12.cpp  native_test_15.cpp  native_test_16.cpp  native_test_17.cpp  native_test_18.cpp  native_test_19.cpp  native_test_2.cpp  native_test_20.cpp  native_test_23.cpp  native_test_24.cpp  native_test_3.cpp  native_test_4.cpp  native_test_8.cpp
frameworks/wmtest/frameworks/: egl_native_test_class.h  inative_test.cpp  inative_test.h  inative_test_key_event_handler.h  inative_test_touch_event_handler.h  main.cpp  main_option.cpp  main_option.h  native_test_class.cpp  native_test_class.h  native_test_ipc_proxy.h  native_test_ipc_stub.h  util.h
frameworks/wmtest/test/: crash_native_test_1.cpp  crash_native_test_1.h  crash_native_test_2.cpp  crash_native_test_2.h  dumper_test_1.h  other_native_test_1.cpp  other_native_test_1.h  pref_native_test_1.cpp  pref_native_test_1.h  wmclient_native_test_1.h  wmclient_native_test_10.cpp  wmclient_native_test_10.h  wmclient_native_test_11.cpp  wmclient_native_test_11.h  wmclient_native_test_12.cpp  wmclient_native_test_12.h  wmclient_native_test_13.cpp  wmclient_native_test_13.h  wmclient_native_test_14.h  wmclient_native_test_15.h  wmclient_native_test_17.cpp  wmclient_native_test_17.h  wmclient_native_test_18.cpp  wmclient_native_test_18.h  wmclient_native_test_19.cpp  (+57 more)
mock/: BUILD.gn
utils/buffer_handle/: BUILD.gn
utils/color_manager/: BUILD.gn
utils/gslogger/: BUILD.gn
utils/hookclose/: BUILD.gn
utils/scoped_bytrace/: BUILD.gn
utils/sync_fence/: BUILD.gn
utils/test_header/: BUILD.gn
utils/vulkan_shell/: BUILD.gn  vulkan_application.cc  vulkan_application.h  vulkan_backbuffer.cc  vulkan_backbuffer.cpp  vulkan_backbuffer.h  vulkan_command_buffer.cc  vulkan_command_buffer.cpp  vulkan_command_buffer.h  vulkan_debug_report.cc  vulkan_debug_report.h  vulkan_device.cc  vulkan_device.cpp  vulkan_device.h  vulkan_handle.cc  vulkan_handle.h  vulkan_image.cc  vulkan_image.cpp  vulkan_image.h  vulkan_interface.cc  vulkan_interface.h  vulkan_native_surface.cc  vulkan_native_surface.h  vulkan_native_surface_android.h  vulkan_native_surface_ohos.cc  vulkan_native_surface_ohos.cpp  vulkan_native_surface_ohos.h  vulkan_proc_table.cc  vulkan_proc_table.cpp  vulkan_proc_table.h  vulkan_provider.cc  vulkan_provider.h  vulkan_surface.cc  vulkan_surface.h  vulkan_swapchain.cc  vulkan_swapchain.cpp  vulkan_swapchain.h  vulkan_swapchain_stub.cc  vulkan_utilities.cc  vulkan_utilities.h  (+3 more)
(+5018 files in other folders)
