# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//third_party/wayland_standard/wayland_protocol.gni")


## Build cursor{{{
config("cursor_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "include",
  ]

  cflags = [
    "-Wall",
    "-Werror",
    "-g3",
  ]
}

ohos_executable("cursor") {
  install_enable = true
  sources = [
    "src/cursor.cpp",
    "src/main.cpp"
  ]

  configs = [ ":cursor_config" ]

  deps = [
    "//utils/native/base:utils",
    "//foundation/multimodalinput/input/frameworks/proxy:libmmi-client",
    "//foundation/graphic/standard:libwmclient",
    "//foundation/graphic/standard:libwmservice",
    "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog",
    "//foundation/graphic/standard/utils:raw_parser",
    
  ]

  part_name = "graphic_standard"
  subsystem_name = "graphic"
}

## Build cursor }}}

