# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")
import("//foundation/graphic/graphic_2d/graphic_config.gni")

## Build vulkan_triangle {{{
ohos_executable("vulkan_triangle") {
  install_enable = true

  sources = [ "triangle.cpp",
              "VulkanDevice.cpp",
              "vulkanexamplebase.cpp",
              "VulkanSwapChain.cpp",
              "VulkanBuffer.cpp",
              "VulkanTools.cpp",
              "VulkanUtils.cpp",
              "VulkanInitializers.hpp",
             ]

  include_dirs = [
    "$graphic_2d_root/frameworks/surface/include",
    "$graphic_2d_root/interfaces/inner_api/surface",
    "$graphic_2d_root/interfaces/inner_api/common",
    "$graphic_2d_root/rosen/modules/render_service_client",
    "//foundation/window/window_manager/interfaces/innerkits",
  ]

  defines = [
    "VK_USE_PLATFORM_OHOS",
    "VK_NO_PROTOTYPES"
    ]


  deps = [
    "$graphic_2d_root/frameworks/surface:surface",
    "$graphic_2d_root/rosen/modules/render_service_client:librender_service_client",
    "$graphic_2d_root/rosen/modules/render_service_base:librender_service_base",
    "$graphic_2d_root/rosen/modules/2d_graphics:2d_graphics",
    "//third_party/vulkan-headers:vulkan_headers",
    "//third_party/zlib:libz",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
    "window_manager:libwm",
    "safwk:system_ability_fwk",
  ]

  part_name = "graphic_2d"
  subsystem_name = "graphic"
}
## Build vulkan_triangle }}}