# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

## Build wmtest {{{
config("wmtest_config") {
  visibility = [ ":*" ]

  include_dirs = []

  cflags = [
    "-Wall",
    "-Werror",
    "-g3",
  ]
}

ohos_executable("wmtest") {
  install_enable = true

  sources = [
    "inative_test.cpp",
    "main.cpp",
    "native_test_0.cpp",
    "native_test_1.cpp",
    "native_test_10.cpp",
    "native_test_11.cpp",
    "native_test_12.cpp",
    "native_test_13.cpp",
    "native_test_14.cpp",
    "native_test_15.cpp",
    "native_test_16.cpp",
    "native_test_17.cpp",
    "native_test_18.cpp",
    "native_test_19.cpp",
    "native_test_2.cpp",
    "native_test_20.cpp",
    "native_test_23.cpp",
    "native_test_24.cpp",
    "native_test_3.cpp",
    "native_test_4.cpp",
    "native_test_5.cpp",
    "native_test_6.cpp",
    "native_test_7.cpp",
    "native_test_8.cpp",
    "native_test_9.cpp",
    "native_test_class.cpp",
    "util.cpp",
  ]

  configs = [ ":wmtest_config" ]

  deps = [
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
    "//foundation/graphic/standard:libvsync_client",
    "//foundation/graphic/standard:libwmclient",
    "//foundation/graphic/standard:libwmservice",
    "//third_party/zlib:libz",
  ]

  part_name = "graphic_standard"
  subsystem_name = "graphic"
}
## Build wmtest }}}
